--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -56,6 +56,9 @@
 }
 
 .dashboard-container {
+    @include mq(medium) {
+        width: 710px;
+    }
     .grid__row {
         justify-content: space-between;
     }
@@ -66,4 +69,9 @@
     border-bottom: 1px solid lightgrey;
     width: 100%;
     justify-content: flex-end;
+}
+
+.chart-filter {
+    display: flex;
+    flex-direction: row;
 }
